# pnet_prostate_paper

./: .gitignore  CLAUDE.md  config_path.py  paper.txt  pnet_comparison_report_2025-06-05.md  pyproject.toml  requirements.txt
checkpoints/minimal_pnet/: best_model.weights.h5
config/: minimal_training_params.yml  skcm_purity_params.yml
data/: data_access.py
data/prostate_paper/: data_reader.py
docs/: README.md
docs/tensorflow_migration/: README.md  component_refactoring_plans.md  migration_overview.md  refactoring_approach.md  tf2_patterns.md
integration_tests/configs/: sample_test_config.yaml
integration_tests/scripts/: test_integration_setup.py
integration_tests/utils/: config_utils.py  logging_utils.py
model/: callbacks_custom.py  coef_weights_utils.py  layers_custom.py  model_factory.py  model_utils.py  nn.py
model/builders/: builders_utils.py  prostate_models.py
model/refactored_code/: README.md  (+3 more)
notebooks/: SKCM_purity.py  SKCM_purity_tf2.ipynb  SKCM_purity_tf2.py  run_minimal_pnet_training_tf2.ipynb  run_skcm_purity_tf2.ipynb  testing.py
pipeline/: one_split.py
results/: evaluation_metrics.yaml  feature_names.yaml  model_summary.txt  pnet_tf2_adaptation_report.md  skcm_purity_metrics.yaml
roadmap/: HOW_TO_UPDATE_ROADMAP_STAGES.md  README.md
scripts/: README_minimal_pnet_training.md  README_skcm_purity_training.md  create_minimal_dataset.py  load_and_preprocess_pnet_data.py  pnet_model_v1.py  pnet_model_v2_sklearn_enhanced.py  run_minimal_pnet_training_tf2.py  run_skcm_purity_tf2.py
test_configs/: README.md
train/: run_me.py
(+124 files in other folders)
