[project]
name = "pnet-prostate-paper"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "h5py (>=3.13.0,<4.0.0)",
    "imageio (>=2.37.0,<3.0.0)",
    "tensorflow (>=2.19.0,<3.0.0)",
    "markdown (>=3.8,<4.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "plotly (>=6.1.0,<7.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "scikit-image (>=0.25.2,<0.26.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "tensorboard (>=2.19.0,<3.0.0)",
    "adjusttext (>=1.3.0,<2.0.0)",
    "lifelines (>=0.30.0,<0.31.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "psutil (>=7.0.0,<8.0.0)",
    "networkx (>=3.4.2,<4.0.0)",
    "pyvis (>=0.3.2,<0.4.0)",
    "requests (>=2.32.3,<3.0.0)",
    "rope (>=1.13.0,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "toml (>=0.10.2,<0.11.0)",
    "upsetplot (>=0.9.0,<0.10.0)",
    "urllib3 (>=2.4.0,<3.0.0)",
    "xlrd (>=2.0.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pyyaml = "^6.0.2"

